header struktur färdig

--- a/index.html
+++ b/index.html
@@ -30,7 +30,21 @@
     <div class="page">
 
         <header>
-                header
+            <div class="banner">
+                <img class="macpic" src="img/mac_.png">
+                <h1 class="name">Amanda Englund</h1>
+                <h2 class="tagline">Web Developer in E-Commerce</h2>                
+            </div>
+            <div class="navbar">
+                <ul>
+                    <li><a href="#">Bio</a></li>
+                    <li><a href="#">Curriculum</a></li>
+                    <li><a href="#">Gallery</a></li>
+                    <li><a href="#">Favs</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="hero"></div>
         </header>
 
         <main>
