bio struktur färdig

--- a/index.html
+++ b/index.html
@@ -37,22 +37,46 @@
             </div>
             <div class="navbar">
                 <ul>
-                    <li><a href="#">Bio</a></li>
-                    <li><a href="#">Curriculum</a></li>
-                    <li><a href="#">Gallery</a></li>
-                    <li><a href="#">Favs</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#bio">Bio</a></li>
+                    <li><a href="#cv">Curriculum</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#favs">Favs</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
             <div class="hero"></div>
         </header>
 
         <main>
-                main
+            <div class="bio">
+            <a name="bio"></a>
+            <h3>Welcome</h3>
+            <h4>Simplicity is the ultimate sophistication</h4>    
+            <p>Hi, I'm Amanda. Currently studying web development in e-commerce at Medieinstitutet in Gothenburg, graduating spring-19.</p>
+            <p>I live on a small, charming island in the Gothenburg archipelago with my fiance and the stormy North Sea as closest neighbour.
+                I recently moved back to Sweden after 15 years abroad, done living life on a beach with a mojito (beleive it or not..), and fully focused on pursuing a so called grown up life style, and that's how I ended up here ;)</p>
+            <p>10 years ago i graduated as an interior designer, and I ran my own design and whole sale business for several years. I've also got long experience in the hotel and restaurant business. My CV is extensive and interesting.</p>
+            <p>I believe life is all about experiencing and learing, and now I'm ready for new adventures!</p>
+            <p>Check out my resume at LinkedIn</p>
+            </div> <!--stänger bio-->
+
+            <div class="curriculum">
+            <a name="cv"></a>
+            curriculum</div>
+
+            <div class="gallery">
+            <a name="gallery"></a>
+            gallery</div> 
+
+            <div class="favs">
+            <a name="favs"></a>
+            favs</div> 
         </main>
 
         <footer>
-                footer
+            <div class="contact">
+            <a name="contact"></a>
+            contact</div> 
         </footer>
                                 
 
