--- a/index.html
+++ b/index.html
@@ -62,16 +62,21 @@
             <div class="curriculum">
             <a name="cv"></a>
             <h3 style="font-size: 1em; letter-spacing: 10px;">Check out my resume at LinkedIn <img style="width: 30px; margin: 0px; padding: 0px;" src="img/linkedin_logo.png"></h3>
-            <a href="https://www.linkedin.com/in/amanda-englund-3b6777150/" target="_blank""><img src="img/linkedin.png"></a>
+            <a href="https://www.linkedin.com/in/amanda-englund-3b6777150/" target="_blank"><img src="img/linkedin.png"></a>
             </div> <!--stänger cv-->
 
             <div class="gallery">
             <a name="gallery"></a>
-            gallery</div> 
+                <div class="project">projekt 1</div>
+                <div class="project">projekt 1</div>
+                <div class="project">projekt 1</div>
+            </div> 
 
             <div class="favs">
             <a name="favs"></a>
-            favs</div> 
+            <h3 style="font-size: 1.5em; letter-spacing: 10px;">In my earpods right now</h3>
+            <a href="https://itunes.apple.com/us/podcast/the-tim-ferriss-show/id863897795?mt=2" target="_blank"><img src="img/tim_ferriss_pod.jpg"></a>
+            </div> 
         </main>
 
         <footer>
