fixat med contact form

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="banner">
                 <img class="macpic" src="img/mac_.png">
                 <h1 class="name">Amanda Englund</h1>
-                <h2 class="tagline">Web Developer in E-Commerce</h2>                
+                <h2>Web Developer in E-Commerce</h2>                
             </div>
             <div class="navbar">
                 <ul>
@@ -75,16 +75,48 @@
             <div class="favs">
             <a name="favs"></a>
             <h3 style="font-size: 1.5em; letter-spacing: 10px;">In my earpods right now</h3>
-            <a href="https://itunes.apple.com/us/podcast/the-tim-ferriss-show/id863897795?mt=2" target="_blank"><img src="img/tim_ferriss_pod.jpg"></a>
+            <a href="https://itunes.apple.com/us/podcast/the-tim-ferriss-show/id863897795?mt=2" target="_blank"><img style="width: 200px;" src="img/tim_ferriss_pod.jpg"></a>
             </div> 
         </main>
 
         <footer>
             <div class="contact">
+
             <a name="contact"></a>
-            contact</div> 
-        </footer>
-                                
+
+            <div class="contactWrapper">
+            <h4 style="font-size: 3em; margin-bottom: 0px;">Keep in touch!</h4>
+                <form>
+                    <label for="all">
+                        Your Name<br/>
+                        <input type="text" value="" name="fName"/>
+                        <br/><br/>
+                        Email address<br/>
+                        <input type="text" value="" name="eMail"/>                        
+                        <br/><br/>
+                        Phone Number<br>
+                        <input type="number" value="" name="phone"/>
+                        <br/><br/>
+                        Message<br/>
+                        <textarea placeholder="What's on your mind..?"></textarea>
+                        <br/><br/>
+                        <input type="submit" value="Submit">
+                        <br/>                    
+                    </label>
+                </form>
+            </div> <!--stänger contactWrapper-->   
+            </div> <!--stänger contact-->   
+            <div class="social">
+                <div class="column">column1</div>
+                <div class="column">
+                    <h5>LET'S BE FRIENDS</h5>
+                    <a href="https://www.instagram.com/amandamaroc/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
+                    <a href="https://www.linkedin.com/in/amanda-englund-3b6777150/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>  
+                    <a href="https://www.pinterest.se/mandienglund/" target="_blank"><i class="fa fa-pinterest-p" aria-hidden="true"></i></i></a>          
+                </div>
+                <div class="column">column3</div>
+            </div>
+        </footer>     
 
     </div> <!--stänger page-->
 
