Strukturerat upp footern

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <div class="curriculum">
             <a name="cv"></a>
             <h3 style="font-size: 1em; letter-spacing: 10px;">Check out my resume at LinkedIn <img style="width: 30px; margin: 0px; padding: 0px;" src="img/linkedin_logo.png"></h3>
+            <br/>
             <a href="https://www.linkedin.com/in/amanda-englund-3b6777150/" target="_blank"><img src="img/linkedin.png"></a>
             </div> <!--stänger cv-->
 
@@ -75,6 +76,7 @@
             <div class="favs">
             <a name="favs"></a>
             <h3 style="font-size: 1.5em; letter-spacing: 10px;">In my earpods right now</h3>
+            <br/>
             <a href="https://itunes.apple.com/us/podcast/the-tim-ferriss-show/id863897795?mt=2" target="_blank"><img style="width: 200px;" src="img/tim_ferriss_pod.jpg"></a>
             </div> 
         </main>
@@ -98,7 +100,7 @@
                         <input type="number" value="" name="phone"/>
                         <br/><br/>
                         Message<br/>
-                        <textarea placeholder="What's on your mind..?"></textarea>
+                        <textarea placeholder="Actually this form is not working ;) See email below"></textarea>
                         <br/><br/>
                         <input type="submit" value="Submit">
                         <br/>                    
@@ -107,14 +109,20 @@
             </div> <!--stänger contactWrapper-->   
             </div> <!--stänger contact-->   
             <div class="social">
-                <div class="column">column1</div>
                 <div class="column">
-                    <h5>LET'S BE FRIENDS</h5>
+                    <h5>Email</h5>
+                    <a href="mailto:amanda.englund@medieinstitutet.se">amanda.englund@medieinstitutet.se</a>
+                </div>
+                <div class="column">
+                    <h5>Let's be friends</h5>
                     <a href="https://www.instagram.com/amandamaroc/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
                     <a href="https://www.linkedin.com/in/amanda-englund-3b6777150/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>  
                     <a href="https://www.pinterest.se/mandienglund/" target="_blank"><i class="fa fa-pinterest-p" aria-hidden="true"></i></i></a>          
                 </div>
-                <div class="column">column3</div>
+                <div class="column">
+                    <h5>Github</h5>
+                    <a href="https://github.com/amandaenglund/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
+                </div>
             </div>
         </footer>     
 
