fixat till projekt, favs och addat quote

--- a/index.html
+++ b/index.html
@@ -61,16 +61,25 @@
 
             <div class="curriculum">
             <a name="cv"></a>
-            <h3 style="font-size: 1em; letter-spacing: 10px;">Check out my resume at LinkedIn <img style="width: 30px; margin: 0px; padding: 0px;" src="img/linkedin_logo.png"></h3>
+            <h3 style="font-size: 1.2em; letter-spacing: 10px;">Check out my resume at LinkedIn <img style="width: 30px; margin: 0px; padding: 0px;" src="img/linkedin_logo.png"></h3>
             <br/>
             <a href="https://www.linkedin.com/in/amanda-englund-3b6777150/" target="_blank"><img src="img/linkedin.png"></a>
             </div> <!--stänger cv-->
 
             <div class="gallery">
             <a name="gallery"></a>
-                <div class="project">projekt 1</div>
-                <div class="project">projekt 1</div>
-                <div class="project">projekt 1</div>
+                <div class="project">
+                    <h4>projekt 1</h4>
+                    <img src="img/arrow.png" width="200px;"/>
+                </div>
+                <div class="project">
+                    <h4>projekt 2</h4>
+                    <img src="img/arrow.png" width="200px;"/>
+                </div>
+                <div class="project">
+                    <h4>projekt 3</h4>
+                    <img src="img/arrow.png" width="200px;"/>
+                </div>
             </div> 
 
             <div class="favs">
@@ -78,7 +87,12 @@
             <h3 style="font-size: 1.5em; letter-spacing: 10px;">In my earpods right now</h3>
             <br/>
             <a href="https://itunes.apple.com/us/podcast/the-tim-ferriss-show/id863897795?mt=2" target="_blank"><img style="width: 200px;" src="img/tim_ferriss_pod.jpg"></a>
-            </div> 
+            <a href="https://www.youtube.com/watch?v=PrBko6TTFhw" target="_blank"><img style="width: 200px;" src="img/dangelo.jpg"></a>
+            <a href="https://itunes.apple.com/us/podcast/oprahs-supersoul-conversations/id1264843400?mt=2" target="_blank"><img style="width: 200px;" src="img/supersoul.jpg"></a>
+            </div>  <!--stänger favs-->   
+            <div class="quote">
+                <h5>If you can't stop thinking about it - Don't stop working for it</h5>
+            </div>
         </main>
 
         <footer>
