--- a/index.html
+++ b/index.html
@@ -70,15 +70,15 @@
             <a name="gallery"></a>
                 <div class="project">
                     <h4>projekt 1</h4>
-                    <img src="img/arrow.png" width="200px;"/>
+                    <img src="img/arrow.png" width="70%;"/>
                 </div>
                 <div class="project">
                     <h4>projekt 2</h4>
-                    <img src="img/arrow.png" width="200px;"/>
+                    <img src="img/arrow.png" width="70%;"/>
                 </div>
                 <div class="project">
                     <h4>projekt 3</h4>
-                    <img src="img/arrow.png" width="200px;"/>
+                    <img src="img/arrow.png" width="70%;"/>
                 </div>
             </div> 
 
@@ -86,9 +86,9 @@
             <a name="favs"></a>
             <h3 style="font-size: 1.5em; letter-spacing: 10px;">In my earpods right now</h3>
             <br/>
-            <a href="https://itunes.apple.com/us/podcast/the-tim-ferriss-show/id863897795?mt=2" target="_blank"><img style="width: 200px;" src="img/tim_ferriss_pod.jpg"></a>
-            <a href="https://www.youtube.com/watch?v=PrBko6TTFhw" target="_blank"><img style="width: 200px;" src="img/dangelo.jpg"></a>
-            <a href="https://itunes.apple.com/us/podcast/oprahs-supersoul-conversations/id1264843400?mt=2" target="_blank"><img style="width: 200px;" src="img/supersoul.jpg"></a>
+            <a href="https://itunes.apple.com/us/podcast/the-tim-ferriss-show/id863897795?mt=2" target="_blank"><img class="favPic" src="img/tim_ferriss_pod.jpg"></a>
+            <a href="https://www.youtube.com/watch?v=PrBko6TTFhw" target="_blank"><img class="favPic" src="img/dangelo.jpg"></a>
+            <a href="https://itunes.apple.com/us/podcast/oprahs-supersoul-conversations/id1264843400?mt=2" target="_blank"><img class="favPic" src="img/supersoul.jpg"></a>
             </div>  <!--stänger favs-->   
             <div class="quote">
                 <h5>If you can't stop thinking about it - Don't stop working for it</h5>
