--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-
+    <a name="top"></a>
     <div class="page">
 
         <header>
@@ -48,8 +48,8 @@
         </header>
 
         <main>
-            <div class="bio">
             <a name="bio"></a>
+            <div class="bio">
             <h3>Welcome</h3>
             <h4>Simplicity is the ultimate sophistication</h4>    
             <p>Hi, I'm Amanda. Currently studying web development in e-commerce at Medieinstitutet in Gothenburg, graduating spring-19.</p>
@@ -59,49 +59,46 @@
             <p>I believe life is all about experiencing and learing, and now I'm ready for new adventures!</p>
             </div> <!--stänger bio-->
 
-            <div class="curriculum">
             <a name="cv"></a>
+            <div class="curriculum">
             <h3 style="font-size: 1.2em; letter-spacing: 10px;">Check out my resume at LinkedIn <img style="width: 30px; margin: 0px; padding: 0px;" src="img/linkedin_logo.png"></h3>
             <br/>
             <a href="https://www.linkedin.com/in/amanda-englund-3b6777150/" target="_blank"><img src="img/linkedin.png"></a>
             </div> <!--stänger cv-->
 
-            <div class="gallery">
             <a name="gallery"></a>
+            <div class="gallery">
                 <div class="project">
-                    <h4>projekt 1</h4>
+                    <h4>project 1</h4>
                     <img src="img/arrow.png" width="70%;"/>
                 </div>
                 <div class="project">
-                    <h4>projekt 2</h4>
+                    <h4>project 2</h4>
                     <img src="img/arrow.png" width="70%;"/>
                 </div>
                 <div class="project">
-                    <h4>projekt 3</h4>
+                    <h4>project 3</h4>
                     <img src="img/arrow.png" width="70%;"/>
                 </div>
             </div> 
-
-            <div class="favs">
             <a name="favs"></a>
+            <div class="favs">
             <h3 style="font-size: 1.5em; letter-spacing: 10px;">In my earpods right now</h3>
             <br/>
             <a href="https://itunes.apple.com/us/podcast/the-tim-ferriss-show/id863897795?mt=2" target="_blank"><img class="favPic" src="img/tim_ferriss_pod.jpg"></a>
             <a href="https://www.youtube.com/watch?v=PrBko6TTFhw" target="_blank"><img class="favPic" src="img/dangelo.jpg"></a>
             <a href="https://itunes.apple.com/us/podcast/oprahs-supersoul-conversations/id1264843400?mt=2" target="_blank"><img class="favPic" src="img/supersoul.jpg"></a>
-            </div>  <!--stänger favs-->   
+            </div>  <!--stänger favs--> 
+
             <div class="quote">
                 <h5>If you can't stop thinking about it - Don't stop working for it</h5>
-            </div>
-        </main>
+            </div>  <!--stänger quote-->  
 
-        <footer>
-            <div class="contact">
-
+            <!--Här börjar contact form-->
             <a name="contact"></a>
-
+            <div class="contact">
             <div class="contactWrapper">
-            <h4 style="font-size: 3em; margin-bottom: 0px;">Keep in touch!</h4>
+            <h4 class="keep">Keep in touch!</h4>
                 <form>
                     <label for="all">
                         Your Name<br/>
@@ -121,28 +118,30 @@
                     </label>
                 </form>
             </div> <!--stänger contactWrapper-->   
-            </div> <!--stänger contact-->   
-            <div class="social">
+            </div> <!--stänger contact-->
+        </main>
+
+        <footer>
+            <a href="#top"><i class="fa fa-angle-double-up fa-2x" aria-hidden="true" style="margin-top: 20px; margin-bottom: 0px;"></i></a>
+            <div class="footersocial">
                 <div class="column">
                     <h5>Email</h5>
                     <a href="mailto:amanda.englund@medieinstitutet.se">amanda.englund@medieinstitutet.se</a>
                 </div>
                 <div class="column">
                     <h5>Let's be friends</h5>
-                    <a href="https://www.instagram.com/amandamaroc/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>  
-                    <a href="https://www.linkedin.com/in/amanda-englund-3b6777150/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>  
-                    <a href="https://www.pinterest.se/mandienglund/" target="_blank"><i class="fa fa-pinterest-p" aria-hidden="true"></i></i></a>          
+                    <a href="https://www.instagram.com/amandamaroc/" target="_blank"><i class="fa fa-instagram social" aria-hidden="true"></i></a>  
+                    <a href="https://www.linkedin.com/in/amanda-englund-3b6777150/" target="_blank"><i class="fa fa-linkedin social" aria-hidden="true"></i></a>  
+                    <a href="https://www.pinterest.se/mandienglund/" target="_blank"><i class="fa fa-pinterest-p social" aria-hidden="true"></i></i></a>          
                 </div>
                 <div class="column">
                     <h5>Github</h5>
-                    <a href="https://github.com/amandaenglund/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> 
+                    <a href="https://github.com/amandaenglund/" target="_blank"><i class="fa fa-github social" aria-hidden="true"></i></a> 
                 </div>
             </div>
         </footer>     
 
     </div> <!--stänger page-->
-
-
 
 </body>
 
