--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
                 I recently moved back to Sweden after 15 years abroad, done living life on a beach with a mojito (beleive it or not..), and fully focused on pursuing a so called grown up life style, and that's how I ended up here ;)</p>
             <p>10 years ago i graduated as an interior designer, and I ran my own design and whole sale business for several years. I've also got long experience in the hotel and restaurant business. My CV is extensive and interesting.</p>
             <p>I believe life is all about experiencing and learing, and now I'm ready for new adventures!</p>
+            <br/>
             </div> <!--stänger bio-->
 
             <a name="cv"></a>
             <div class="curriculum">
-            <h3 style="font-size: 1.2em; letter-spacing: 10px;">Check out my resume at LinkedIn <img style="width: 30px; margin: 0px; padding: 0px;" src="img/linkedin_logo.png"></h3>
+            <h3 class="checkout">Check out my resume at LinkedIn <img style="width: 30px; margin: 0px; padding: 0px;" src="img/linkedin_logo.png"></h3>
             <br/>
             <a href="https://www.linkedin.com/in/amanda-englund-3b6777150/" target="_blank"><img src="img/linkedin.png"></a>
             </div> <!--stänger cv-->
