--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title></title>
+    <title>Amanda Englund | Web Developer in E-Commerce</title>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <script src="https://use.fontawesome.com/1ea0ded6c7.js"></script>    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -90,7 +89,7 @@
                 <h5 class="cities">Barcelona</h5>
                 <h5 class="cities">Málaga</h5>
                 <h5 class="cities">Tenerife</h5>
-            </div>  <!--stänger quote-->  
+            </div>  <!--stänger places-->  
 
 
             <a name="cv"></a>
@@ -117,7 +116,8 @@
                     <h5><a href=#>url.com</a></h5>
                     <img src="img/arrow.png" width="70%;"/>
                 </div>
-            </div> 
+            </div>   <!--stänger gallery--> 
+
             <a name="favs"></a>
             <div class="favs">
             <h3 style="font-size: 1.5em; letter-spacing: 10px;">In my earpods right now</h3>
@@ -175,7 +175,7 @@
                     <h5>Github</h5>
                     <a href="https://github.com/amandaenglund/" target="_blank"><i class="fa fa-github social" aria-hidden="true"></i></a> 
                 </div>
-            </div>
+            </div>  <!--stänger footersocial--> 
         </footer>     
 
     </div> <!--stänger page-->
